--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <a href="search.html">ຄົ້ນຫາຂໍມູນສະມາຊິກ</a>
     </div>
     <hr>
-    <iframe src="Menu/index.html" width="100%" height="600px" frameborder="0"></iframe>
+    <iframe src="Menu/menu2/index.html" width="100%" height="600px" frameborder="0"></iframe>
 </body>
 </html>
