--- a/Menu/menu2/index.html
+++ b/Menu/menu2/index.html
@@ -46,7 +46,7 @@
 
 <body><br>
 	<center>
-    <h1>ປະຫວັັດການເຄື່ອນໄຫວ</h1>
+    <h1>ລາຍຊື່ສະມາຊິກ</h1>
 	</center>
     <a href=""></a>
 <div class="container">
