--- a/Menu/search.html
+++ b/Menu/search.html
@@ -14,7 +14,7 @@
 <body>
     <div>
         <center><h1><b><i><u>ກູ່ມພູມູ້ງເມືອງ</u></h1></i></b></h1></center>
-        <a href="index.html">ໜ້າຫຼັກ</a>
+        <a href="../index.html">ໜ້າຫຼັກ</a>
         <a href="entry.html">ການບັນທຶກຂໍ້ມູນ</a>
         <a href="history.html">ປະຫວັັດການເຄື່ອນໄຫວ</a>
         <a href="search.html">ຄົ້ນຫາຂໍມູນສະມາຊິກ</a>
