--- a/Menu/entry.html
+++ b/Menu/entry.html
@@ -14,12 +14,12 @@
 <body>
     <div>
         <center><h1><b><i><u>ກູ່ມພູມູ້ງເມືອງ</u></h1></i></b></h1></center>
-        <a href="index.html">ໜ້າຫຼັກ</a>
+        <a href="../index.html">ໜ້າຫຼັກ</a>
         <a href="entry.html">ການບັນທຶກຂໍ້ມູນ</a>
         <a href="history.html">ປະຫວັັດການເຄື່ອນໄຫວ</a>
         <a href="search.html">ຄົ້ນຫາຂໍມູນສະມາຊິກ</a>
     </div>
     <hr>
-    <iframe src="Menu/enty.html" width="100%" height="600px" frameborder="0"></iframe>
+    <iframe src="menu2/enty.html" width="100%" height="600px" frameborder="0"></iframe>
 </body>
 </html>
