--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <div>
         <center><h1><b><i><u>ກູ່ມພູມູ້ງເມືອງ</u></h1></i></b></h1></center>
-        <a href="index.html">ໜ້າຫຼັກ</a>
-        <a href="entry.html">ການບັນທຶກຂໍ້ມູນ</a>
-        <a href="history.html">ປະຫວັັດການເຄື່ອນໄຫວ</a>
-        <a href="search.html">ຄົ້ນຫາຂໍມູນສະມາຊິກ</a>
+        <button><a href="index.html">ໜ້າຫຼັກ</a></button>
+        <a href="Menu/entry.html">ການບັນທຶກຂໍ້ມູນ</a>
+        <a href="Menu/history.html">ປະຫວັັດການເຄື່ອນໄຫວ</a>
+        <a href="Menu/search.html">ຄົ້ນຫາຂໍມູນສະມາຊິກ</a>
     </div>
     <hr>
     <iframe src="Menu/menu2/index.html" width="100%" height="600px" frameborder="0"></iframe>
