--- a/Menu/menu2/enty.html
+++ b/Menu/menu2/enty.html
@@ -24,6 +24,9 @@
         text-align: center;
         background-color: aqua;
     }
+    .Form_Entry{
+        width: 100;
+    }
 </style>
 
 <body>
@@ -38,13 +41,13 @@
         <br><br>
         <label>ສິບລົດ</label><br>
         <input type="number" class="number" name="Tithe" required placeholder='enter tithe amount'>
-        +<br><br>
+        <br><br>
         <label>ທົວໄປ</label><br>
         <input type="number" class="number" name="Sbath" required placeholder='enter sbath amount'>
-        +<br><br>
+        <br><br>
         <label>ຖວາຍອື່ນໆ</label><br>
         <input type="number" class="number" name="Other" required placeholder='enter Other amount'>
-        =<br><br>
+        <br><br>
         <label>ລວມເງິນທັງໝົດ</label><br>
         <input type="text" id="total" name="Total"  disabled />
         <br><br>
