--- a/Menu/entry.html
+++ b/Menu/entry.html
@@ -19,6 +19,6 @@
         <button type="menu"><a href="search.html">ຄົ້ນຫາຂໍມູນສະມາຊິກ</a></button>
     </div>
     <hr>
-    <iframe src="menu2/enty.html" width="100%" height="600px" frameborder="0"></iframe>
+    <iframe src="menu2/entry_data.html" width="100%" height="600px" frameborder="0"></iframe>
 </body>
 </html>
