--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,16 @@
     <title>Document</title>
 </head>
 <style>
-    *{
+    * {
         font-family: phetsarath ot;
     }
 </style>
+
 <body>
     <div>
-        <center><h1><b><i><u>ກູ່ມພູມູ້ງເມືອງ</u></h1></i></b></h1></center>
+        <center>
+            <h1><b><i><u>ກູ່ມພູມູ້ງເມືອງ</u></h1></i></b></h1>
+        </center>
         <button type="menu"><a href="index.html">ໜ້າຫຼັກ</a></button>
         <button type="menu"><a href="Menu/entry.html">ການບັນທຶກຂໍ້ມູນ</a></button>
         <button type="menu"><a href="Menu/search.html">ຄົ້ນຫາຂໍມູນສະມາຊິກ</a></button>
@@ -21,4 +25,5 @@
     <hr>
     <iframe src="Menu/menu2/index.html" width="100%" height="600px" frameborder="0"></iframe>
 </body>
+
 </html>
