--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button type="menu"><a href="index.html">ໜ້າຫຼັກ</a></button>
         <button type="menu"><a href="Menu/entry.html">ການບັນທຶກຂໍ້ມູນ</a></button>
         <button type="menu"><a href="Menu/search.html">ຄົ້ນຫາຂໍມູນສະມາຊິກ</a></button>
+        <button type="menu"><a href="Menu/menu2/Sumary_Date/Summary.html" target="_blank">ການສະຫຼຸບເງິນປະຈຳເດືອນ</a></button>
     </div>
     <hr>
     <iframe src="Menu/menu2/index.html" width="100%" height="600px" frameborder="0"></iframe>
