--- a/Menu/menu2/entry_data.html
+++ b/Menu/menu2/entry_data.html
@@ -46,7 +46,7 @@
         <input type="number" class="number" name="Other" required placeholder='enter Other amount'>
         <br><br>
         <label>ລວມເງິນທັງໝົດ</label><br>
-        <input type="text" id="total" name="Total"  disabled />
+        <input type="text" id="total" name="Total" />
         <br><br>
         <label>ວັນທື</label><br>
         <input type="date" name="Date" required><br><br>
@@ -66,7 +66,7 @@
             e.preventDefault();
             document.querySelector("#sub").value = "ກຳລັງບັນທຶກໃສ່ຖັງຂໍ້ມູນ...";
             let data = new FormData(form);
-            fetch('https://script.google.com/macros/s/AKfycbztmp1y9eYUqv10o0uUrZMArZP_ygundYN5L6lKSNTrB0ya4RTZClkjRDQqKv89L-mXoQ/exec', {
+            fetch('https://script.google.com/macros/s/AKfycbxu6PfQ6U34ziseRaSQd5g6ZRxAC-TZU_reox_eh_n1VWgYFVQ5hRpPeUj2TA9ftb5cIA/exec', {
                 method: "POST",
                 body: data
             })
